--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rc-table",
+  "name": "nestia-rc-table",
   "version": "5.2.13",
   "description": "table ui component for react",
   "keywords": [
