--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestia-rc-table",
-  "version": "5.2.13",
+  "version": "5.2.14",
   "description": "table ui component for react",
   "keywords": [
     "react",
@@ -16,7 +16,7 @@
   ],
   "main": "./lib/index",
   "entry": {
-    "rc-table": [
+    "nestia-rc-table": [
       "./assets/animation.less",
       "./assets/bordered.less",
       "./assets/index.less",
